# ProjectedNewton

./: CMakeLists.txt  main.cpp  plot.cpp  plot.h  projected_newton.cpp  projected_newton.hpp  test.cpp  view_mesh.cpp
